syntax = "proto3";

package grpc;
// import "google/protobuf/empty.proto";

option go_package = "github.com/lordvidex/gomoney/pkg/grpc";


// messages
message StringID {
  string id = 1;
}
message IntID {
  int64 id = 1;
}

message Phone {
  string number = 1;
}

message User {
  string id = 1;
  string name = 2;
  string phone = 3;
}

message Account {
  int64 id = 1;
  string title = 2;
  string description = 3;
  double balance = 4;
  Currency currency = 5;
  bool is_blocked = 6;
}

message ManyAccounts {
  StringID owner = 1;
  repeated Account accounts = 2;
}

enum Currency {
  USD = 0;
  RUB = 1;
  NGN = 2;
}

// services

service UserService {
  rpc GetUserByPhone(Phone) returns (User) {}
  rpc CreateUser(User) returns (StringID) {}  
}

service AccountService {
  rpc GetAccounts(StringID) returns (ManyAccounts) {} // get all accounts of a user
  rpc CreateAccount(ManyAccounts) returns (IntID) {} // create an account for a user
}